TEST_PROGRAMS/VALID/grady_weber/modulo.min
# f : (int,int) -> int computes the first number modulo the second
var m : int;
var n : int;
var mCopy : int;
var isPositive : int;
isPositive = 1;
print "this program computes n mod m";
print "only enter positive integers";
print "enter n";
read n;
print "enter m";
read m;
while isPositive do
    n = n - m;
    #check if n is negative
    mCopy = m;
    while mCopy do
        if n + mCopy then
        else
            isPositive = 0;
        endif
        mCopy = mCopy - 1;
    done
done
n = n + m;
print "n mod m equals ";
print n;

